--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,10 @@
 /* CSS Document */
 @import url("normalize.css");
-@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700);
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500);
+@import url("https://fonts.googleapis.com/css?family=Anton|Oswald");
 body {
   background: #eaeaea;
   margin: 0px auto;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 300;
+  font-family: 'Oswald', sans-serif;
   color: #777;
   width: 100%;
   font-size: 16px;
@@ -15,7 +13,7 @@ body {
 
 h1 {
   font-size: 4em;
-  font-weight: 700;
+  font-family: 'Anton', sans-serif;
   color: #333;
   margin: 10px 0px;
   padding: .75vw; }
@@ -44,23 +42,25 @@ a {
   text-decoration: none;
   color: #00aeef; }
 
-/* Mobile First */
-.container {
-  width: 80vw;
-  margin: 0 auto; }
+span {
+  font-family: 'Oswald', sans-serif; }
 
-header, section, nav, .sub-box, footer {
+/* Mobile First */
+header, main, nav, .sub-box, footer {
   flex: 1 100%; }
 
 header {
   background: url(../images/backgrounds/rotate.php) no-repeat center top;
   background-color: #777;
   background-size: cover;
-  background-position: 50% 75%;
-  width: 100%;
-  height: 60vw; }
+  background-attachment: fixed;
+  min-height: 100vh;
+  text-align: center;
+  transition: all 0.5s ease; }
+  header .container {
+    margin: 50% auto; }
   header h1 {
-    font-size: 5em;
+    font-size: 17vw;
     font-weight: 700;
     line-height: 1em;
     margin: 10px 0px 0 0;
@@ -68,11 +68,14 @@ header {
     color: #FFF;
     text-shadow: 1px 4px 6px #000; }
   header p {
-    font-size: 5vw;
+    font-size: 7vw;
     margin: 0px 0 15px 1.5vw;
     padding: 0;
     color: #CCC;
     text-shadow: 1px 4px 6px #000; }
+
+header:focus {
+  transform: scale(1.2); }
 
 nav ul {
   list-style: none;
@@ -93,11 +96,18 @@ nav a {
 nav a:hover {
   background: #00aeef; }
 
+main {
+  width: 100%;
+  margin: 0 auto; }
+
 section {
-  width: 90%;
-  max-width: 1170px;
-  margin: auto;
-  padding-left: .5em; }
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1170px; }
+  section div {
+    flex: 1 auto;
+    margin: 1vh 2vw; }
 
 .imgfull {
   width: 100%; }
@@ -129,6 +139,9 @@ footer {
   margin-top: 0em;
   font-size: 1.5em; }
 
+.flex {
+  display: flex; }
+
 .lb {
   display: none;
   position: fixed;
@@ -151,8 +164,17 @@ footer {
 
 /* TAB screens */
 @media all and (min-width: 500px) {
+  header {
+    order: 1;
+    min-height: 100vh; }
+    header .container {
+      margin: 25% auto; }
+    header h1 {
+      font-size: 9vw; }
+    header p {
+      font-size: 5vw; }
   nav {
-    order: 1; }
+    order: 2; }
     nav ul {
       display: -webkit-box;
       display: -moz-box;
@@ -166,15 +188,17 @@ footer {
       border: 0;
       text-align: center;
       padding: 10px; }
-  header {
-    order: 2;
-    height: 20em; }
-    header h1 {
-      font-size: 9vw; }
-    header p {
-      font-size: 5vw; }
+  main {
+    order: 3;
+    margin: 0 auto; }
   section {
-    order: 3; }
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    max-width: 1170px; }
+    section div {
+      flex: 1 auto;
+      margin: 0 2vw 0 0; }
   .imgfull {
     width: 90%;
     margin: 1vw 5% 1vw 5%; }
@@ -205,3 +229,37 @@ footer {
     font-size: 6vw; }
   header p {
     font-size: 3vw; } }
+
+/* Animation stuff */
+.scroll-in {
+  opacity: 0; }
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+.fade-in {
+  opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s; }
