--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,34 +2,36 @@
 /* CSS Document */
 
 @import url("normalize.css");
-@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700);
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500);
+@import url('https://fonts.googleapis.com/css?family=Anton|Oswald');
 
-body { background: #eaeaea; margin: 0px auto; font-family: 'Roboto Condensed', sans-serif;font-weight: 300; color:#777; width: 100%; font-size: 16px ; display: flex;	flex-flow: column wrap;}
-h1 { font-size: 4em; font-weight: 700; color: #333; margin: 10px 0px; padding: .75vw; }
+body { background: #eaeaea; margin: 0px auto; font-family: 'Oswald', sans-serif; color:#777; width: 100%; font-size: 16px ; display: flex;	flex-flow: column wrap;}
+h1 { font-size: 4em; font-family: 'Anton', sans-serif; color: #333; margin: 10px 0px; padding: .75vw; }
 h2 { font-size: 4em; font-weight: 400; color: #333; margin: 10px 0px; padding: .75vw; }
 h3 { font-size: 2em; font-weight: 300; color: #333; margin: 10px 0px; padding: .75vw; }
 p { font-size: 1.5em; margin: 0px; padding: 1vw; color: #333;}
 a { text-decoration: none; color: #00aeef;  }
+span {font-family: 'Oswald', sans-serif;}
 
 /* Mobile First */
-.container {
-	width:80vw;
-    margin:0 auto; }
 
-header, section, nav, .sub-box, footer {
+header, main, nav, .sub-box, footer {
   flex: 1 100%;
 }
 header{
 	background: url(../images/backgrounds/rotate.php) no-repeat center top;
 	background-color: #777;
 	background-size: cover;
-	background-position: 50% 75%;
-	width: 100%;
-	height: 60vw;
+	background-attachment: fixed;
+	min-height:100vh;
+	text-align:center;
+	transition: all 0.5s ease;
+	.container {
+		margin: 50% auto;
+	}
+
 
  h1 {
-	font-size: 5em;
+	font-size: 17vw;
 	font-weight: 700;
 	line-height: 1em;
 	margin: 10px 0px 0 0;
@@ -38,12 +40,15 @@ header{
 	text-shadow: 1px 4px 6px #000;
 } 
  p {
-	font-size: 5vw;
+	font-size: 7vw;
 	margin: 0px 0 15px 1.5vw;
 	padding: 0;
 	color: #CCC;
 	text-shadow: 1px 4px 6px #000;
 }
+}
+header:focus {
+	transform: scale(1.2);
 }
 nav {
  ul{
@@ -67,11 +72,23 @@ nav {
   background: #00aeef;
 }
 }
+main {
+	width: 100%;
+	margin: 0 auto;
+}
 section {
-	width: 90%;
+	display: block;
+	width: 100%;
+	margin: 0 auto;
 	max-width: 1170px;
-	margin: auto;
-	padding-left: .5em;
+
+	div {
+		flex: 1 auto;
+		margin: 1vh 2vw;
+	}
+}
+#hello {
+
 }
 .imgfull {
 	width: 100%;
@@ -103,6 +120,9 @@ footer {
 	margin-top: 0em;
 	font-size: 1.5em;
 }
+.flex {
+	display:flex;
+}
 .lb {
   display: none;
   position: fixed;
@@ -128,8 +148,22 @@ footer {
 
 /* TAB screens */
 @media all and (min-width: 500px) {
-nav {
+header{
 	order:1;
+	min-height:100vh;
+		.container {
+		margin: 25% auto;
+	}
+
+	 h1 {
+		font-size: 9vw;
+	}
+	 p {
+		font-size: 5vw;
+	}
+}
+nav {
+	order:2;
 
 	 ul{
 		display: -webkit-box;
@@ -147,19 +181,21 @@ nav {
 	    padding: 10px;
 	}
 }
-header{
-	order:2;
-	height: 20em;
 
-	 h1 {
-		font-size: 9vw;
-	}
-	 p {
-		font-size: 5vw;
-	}
+main {
+	order:3;
+	margin: 0 auto;
 }
 section {
-	order:3;
+	display: flex;
+	width: 100%;
+	margin: 0 auto;
+	max-width: 1170px;
+
+	div {
+		flex: 1 auto;
+		margin: 0 2vw 0 0;
+	}
 }
 .imgfull {
 	width: 90%;
@@ -192,10 +228,10 @@ footer {
 nav {
 	ul{
 	justify-content: flex-end;
-}
- a {
-	padding: .5em 3em .5em 3em;
 	}
+	 a {
+		padding: .5em 3em .5em 3em;
+		}
 }
 .imgfull {
 	width: 80%;
@@ -204,10 +240,33 @@ nav {
 header {
 	h1 {
 	font-size: 6vw;
-}
- p {
-	font-size: 3vw;
-}
+	
+	}
+	 p {
+		font-size: 3vw;
+	}
 }
 }
 
+/* Animation stuff */
+.scroll-in {
+  opacity:0
+}
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+ 
+.fade-in {
+  opacity:0;  
+  -webkit-animation:fadeIn ease-in 1;  
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards; 
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
+}
