--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,9 +5,9 @@
 @import url('https://fonts.googleapis.com/css?family=Anton|Oswald');
 
 body { background: #eaeaea; margin: 0px auto; font-family: 'Oswald', sans-serif; color:#777; width: 100%; font-size: 16px ; display: flex;	flex-flow: column wrap;}
-h1 { font-size: 4em; font-family: 'Anton', sans-serif; color: #333; margin: 10px 0px; padding: .75vw; }
-h2 { font-size: 4em; font-weight: 400; color: #333; margin: 10px 0px; padding: .75vw; }
-h3 { font-size: 2em; font-weight: 300; color: #333; margin: 10px 0px; padding: .75vw; }
+h1 { font-size: 4em; font-family: 'Anton', sans-serif; color: #333; margin: 10px 0px; padding: .75vw 0; }
+h2 { font-size: 4em; font-weight: 400; color: #333; margin: 10px 0px; padding: .75vw 0; }
+h3 { font-size: 2em; font-weight: 300; color: #333; margin: 10px 0px; padding: .75vw 0; }
 p { font-size: 1.5em; margin: 0px; padding: 2vh 0; color: #333;}
 a { text-decoration: none; color: #00aeef;  }
 span {font-family: 'Oswald', sans-serif;}
@@ -94,6 +94,11 @@ section {
  div {
  	width:100%
  }
+ h2 {
+    font-size: 20vh;
+    line-height: 1em;
+    margin-left: -.6vw;
+}
 }
 .imgfull {
 	width: 100%;
@@ -196,6 +201,7 @@ section {
 	width: 100%;
 	margin: 0 auto;
 	max-width: 1170px;
+	align-items: center;
 
 	div {
 		flex: 1 auto;
