--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,46 @@ section {
     margin-left: -.6vw;
     color: #eee; }
 
+#portfolio div {
+  padding: 0; }
+
+.port-container {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #000;
+  overflow: hidden; }
+
+.port-item {
+  width: 100%;
+  max-height: 30em;
+  position: relative;
+  float: left;
+  overflow: hidden; }
+  .port-item a:hover .port-image, .port-item a:active .port-image, .port-item a:focus .port-image {
+    transform: scale(1.1);
+    opacity: .7; }
+  .port-item a:hover .port-caption, .port-item a:active .port-caption, .port-item a:focus .port-caption {
+    opacity: 1; }
+
+.port-image {
+  width: 100%;
+  opacity: 1;
+  transition: all .7s ease-out, opacity .7s ease; }
+
+.port-caption {
+  position: absolute;
+  z-index: 1;
+  text-align: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  font-size: 2.5em;
+  opacity: 0;
+  transition: all .7s ease-out, opacity .7s ease; }
+  .port-caption p {
+    color: #eee;
+    margin: 1vh; }
+
 .imgfull {
   width: 100%; }
 
@@ -222,16 +262,18 @@ footer {
     order: 3;
     margin: 2em auto; }
   section {
-    display: flex;
     width: 100%;
     margin: 0 auto;
     max-width: 1170px;
     align-items: center; }
-    section div {
-      flex: 1 auto;
-      padding: 4vw; }
-  #hello div {
+  #hello {
+    display: flex; }
+    #hello div {
+      width: 50%; }
+  .port-item {
     width: 50%; }
+  .port-caption p {
+    margin: 1em; }
   .imgfull {
     width: 90%;
     margin: 1vw 5% 1vw 5%; }
@@ -247,7 +289,8 @@ footer {
   .lb:target {
     display: block; }
   footer {
-    order: 4; } }
+    order: 4;
+    display: flex; } }
 
 /* Desktop */
 @media all and (min-width: 800px) {
